Fix unlock button text-align in FF
Oh ffs...

--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -210,6 +210,7 @@ p a,
     color: var(--post-password-submit-color);
     font-size: var(--fs-l);
     font-weight: 700;
+    text-align: center;
     text-transform: uppercase;
     border-radius: 0 0 35px 35px;
     height: 66px;
